--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>домашнее задание#7</title>
+    <title>домашнее задание#8</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/styles.min.css">
 </head>
 <body class="page">
     <!-- шапка -->
-   <!-- <header class="header ">
+   <header class="header ">
        <div class="container header__container"> 
        <nav class="navigation">
        <a href="./index.html" class="logo header__logo"> <span class="logo__color">Web</span> Studio</a>
@@ -43,7 +43,7 @@
        </div>
    </header>  -->
    <!-- герой -->
-   <!-- <main>
+    <main>
        <section class="hero">
            <div class="container">
            <h1 class="hero__title  hero-container"> Эффективные решения для вашего бизнеса</h1>
