--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/styles.min.css">
 </head>
-<body class="page">
+<body >
     <!-- шапка -->
    <header class="header ">
        <div class="container header__container"> 
